# pytest-aioboto3

./: .gitignore  .python-version  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
pytest_aioboto3/: __init__.py  aioboto3_fixtures.py  moto_fixtures.py
tests/: aioboto3_fixtures.py  conftest.py  moto_fixtures.py  test_s3.py
