[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-aioboto3"
version = "0.4.0"
description = "Aioboto3 Pytest with Moto"
authors = ["Shipwell Engineering", "Phillip Verheyden"]
license = "WTFPL"
readme = "README.md"
homepage = "https://github.com/phillipuniverse/pytest-aioboto3"
repository = "https://github.com/phillipuniverse/pytest-aioboto3"
keywords = ["pytest", "aioboto3", "moto"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/phillipuniverse/pytest-aioboto3/issues"

[tool.poetry.dependencies]
python = "^3.10"
aioboto3 = ">=12.0.0"
moto = {extras = ["s3", "server"], version = ">=4.2.3"}
types-aiobotocore = {extras = ["s3"], version = ">=2.7.0"}
requests = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
boto3-stubs = {extras = ["s3"], version = "^1.28.70"}
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    'error', # treat all warnings as errors
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning", # see https://github.com/aio-libs/aiobotocore/issues/1021#issuecomment-1938713736
]
asyncio_mode = "auto"

[tool.poetry.plugins."pytest11"]
pytest-aioboto3 = 'pytest_aioboto3'
